updated model data cleaning

--- a/Bobby Notebook.ipynb
+++ b/Bobby Notebook.ipynb
@@ -1127,83 +1127,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean Make and Model Data\n",
+    "The Make and Model columns need to be cleaned to draw conclusions from the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Cessna                            15321\n",
-       "Piper                              8411\n",
-       "Beech                              2999\n",
-       "Boeing                             1798\n",
-       "Mooney                              786\n",
-       "                                  ...  \n",
-       "Angel Aircraft Corporation            1\n",
-       "Riley                                 1\n",
-       "Rainbow Sky Reach                     1\n",
-       "Aeroprakt Manufacturing Sp Zoo        1\n",
-       "Rolladen-Schneider                    1\n",
-       "Name: Make, Length: 1094, dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\series.py:4517: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().fillna(\n",
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\indexing.py:1596: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\indexing.py:1765: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  isetter(loc, value)\n"
+     ]
     }
    ],
    "source": [
-    "df_30 = df_30[df_30['Amateur.Built']=='No']\n",
-    "df_30['Make'].value_counts()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Cessna               15378\n",
-       "Piper                 8481\n",
-       "Beech                 3074\n",
-       "Boeing                1840\n",
-       "Mooney                 835\n",
-       "Grumman                745\n",
-       "Air Tractor            731\n",
-       "Bellanca               512\n",
-       "Cirrus                 459\n",
-       "Champion               375\n",
-       "Maule                  367\n",
-       "Aeronca                339\n",
-       "Aviat                  338\n",
-       "Airbus                 325\n",
-       "De Havilland           292\n",
-       "Mcdonnell Douglas      264\n",
-       "Stinson                260\n",
-       "Luscombe               253\n",
-       "Aero Commander         220\n",
-       "Rockwell               202\n",
-       "Embraer                199\n",
-       "North American         199\n",
-       "Taylorcraft            195\n",
-       "Ayres                  177\n",
-       "Bombardier             157\n",
-       "Ercoupe                134\n",
-       "Learjet                129\n",
-       "Diamond Aircraft       115\n",
-       "Socata                 104\n",
-       "Name: Make_2, dtype: int64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#List of Aircraft Manufacturers used to clean data \n",
     "major_manufacturers=['Cessna',\n",
     "'Piper',\n",
     "'Beech',\n",
@@ -1238,35 +1199,40 @@
     "'Ercoupe',\n",
     "'Bombardier',\n",
     "]\n",
+    "\n",
+    "#Filling null values\n",
     "df_30['Make'].fillna('n/a', inplace=True)\n",
+    "#cleaning Make data and populating new column Make.Clean\n",
+    "#e.g. The Boeing Aircraft Company, Boeing inc and boeing all become Boeing in Make.Clean\n",
     "for manufacturer in major_manufacturers:\n",
-    "    df_30.loc[df_30['Make'].str.contains(manufacturer, case=False), 'Make_2'] = manufacturer\n",
-    "#Special Case de Havilland\n",
-    "df_30.loc[df_30['Make'].str.contains('Dehavilland', case=False), 'Make_2'] = 'De Havilland'\n",
-    "df_30['Make_2'].value_counts();"
+    "    df_30.loc[df_30['Make'].str.contains(manufacturer, case=False), 'Make.Clean'] = manufacturer\n",
+    "#De Havilland is in the data as De Havilland and Dehavilland so it needs a special case\n",
+    "df_30.loc[df_30['Make'].str.contains('Dehavilland', case=False), 'Make.Clean'] = 'De Havilland'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "df['Model'].loc[df['Make']=='Airbus'].value_counts();"
+    "# Cleaning Model Data\n",
+    "Below are groups of the most popular aircraft models for Boeing, Airbus and Cessna. These were created using data from the companies websites. For example, Airbus considers its A319, A320 and A321 airliners to be variants in the A320 family so they are grouped together as the A320."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boeing_aircraft_models = ['707','717','727','737','747','757','767','777','787']\n",
-    "airbus_aircraft_models = {'A220':['220','BD50'],'A300':['300','F462'],'A310':['310'],'A320':['320','319','321'],\n",
+    "#Aircraft model groups\n",
+    "boeing_aircraft_models = {'707':['707'],'717':['717'],'727':['727'],'737':['737'],'747':['747'],'757':['757'],\n",
+    "                          '767':['767'],'777':['777'],'787':['787'],'Model 75':\n",
+    "                          ['A75','A 75','A-75','B75','B 75','B-75','D75','D 75','D-75','E75','E 75','E-75','PT 17','PT-17','PT17']}\n",
+    "airbus_aircraft_models = {'A220':['220','BD50'],'A300':['300','F462'],'A310':['310'],'A320':['319','320','321'],\n",
     "                          'A330':['330'],'A340':['340'],'A350':['350'],'A380':['380']}\n",
-    "cessna_aircraft_models = ['152','172','150','180','182','140','170','188','185','177','210']"
+    "cessna_aircraft_models = ['152','172','150','180','182','140','170','188','185','177','210']\n",
+    "#Filling null values in Model data\n",
+    "df_30['Model'].fillna('n/a', inplace=True)"
    ]
   },
   {
@@ -1278,13 +1244,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "737         856\n",
+       "Model 75    203\n",
+       "747         179\n",
+       "757         163\n",
+       "777         151\n",
+       "767         150\n",
+       "727          49\n",
+       "787          41\n",
+       "717          22\n",
+       "707          12\n",
+       "Name: Model.Clean, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_30['Model'].fillna('n/a', inplace=True)\n",
+    "#First creating a new data frame with just Boeing data\n",
+    "boeing_data = pd.DataFrame(df_30.loc[df_30['Make.Clean']=='Boeing'])\n",
+    "#Taking model data with variant information, grouping it by family and saving it in new column called Model.Clean\n",
+    "#e.g. 737-200, B737-800 and 737-3B7 are all stored as 737\n",
     "for model in boeing_aircraft_models:\n",
-    "    df_30.loc[df_30['Model'].str.contains(model, case=False), 'Model_2'] = model\n"
+    "    df_30.loc[df_30['Model'].str.contains(model, case=False), 'Model.Clean'] = model\n",
+    "#Looping through the boeing_aircraft_models dictionary\n",
+    "for model in boeing_aircraft_models:\n",
+    "    #Looping through individual dictionary entrys which are lists of variants that make up each aircraft model\n",
+    "    for variant in boeing_aircraft_models[model]:\n",
+    "        boeing_data.loc[boeing_data['Model'].str.contains(variant, case=False), 'Model.Clean'] = model\n",
+    "        \n",
+    "boeing_data['Model.Clean'].value_counts()"
    ]
   },
   {
@@ -1296,131 +1295,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A320              91\n",
-       "A330              32\n",
-       "A321              20\n",
-       "A319              16\n",
-       "A320-232          14\n",
-       "                  ..\n",
-       "A320 - 216         1\n",
-       "A300B4-622R        1\n",
-       "A300 - F4 622R     1\n",
-       "A330 - 323         1\n",
-       "F4-622R            1\n",
-       "Name: Model, Length: 71, dtype: int64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Airbus_data = pd.DataFrame(df_30.loc[df_30['Make_2']=='Airbus'])\n",
-    "Airbus_data['Model'].value_counts();\n"
+    "#First creating a new data frame with just Airbus data\n",
+    "airbus_data = pd.DataFrame(df_30.loc[df_30['Make.Clean']=='Airbus'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "Airbus_data['Model'] = Airbus_data['Model'].str.replace('-','')\n",
-    "Airbus_data['Model'] = Airbus_data['Model'].str.replace(' ','')\n",
-    "Airbus_data['Model'] = Airbus_data['Model'].str[:4]\n"
+    "#removeing dashes and white space then saving the first four characters \n",
+    "airbus_data['Model'] = airbus_data['Model'].str.replace('-','')\n",
+    "airbus_data['Model'] = airbus_data['Model'].str.replace(' ','')\n",
+    "airbus_data['Model'] = airbus_data['Model'].str[:4]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "n/a     24427\n",
-       "172      4227\n",
-       "150      2237\n",
-       "182      1845\n",
-       "180      1340\n",
-       "210      1119\n",
-       "152      1041\n",
-       "737       840\n",
-       "140       802\n",
-       "185       546\n",
-       "170       465\n",
-       "177       397\n",
-       "188       350\n",
-       "A320      228\n",
-       "747       172\n",
-       "757       165\n",
-       "767       148\n",
-       "777       147\n",
-       "A330       55\n",
-       "727        48\n",
-       "787        41\n",
-       "A300       22\n",
-       "717        22\n",
-       "707        11\n",
-       "A310        8\n",
-       "A220        5\n",
-       "A380        5\n",
-       "A340        1\n",
-       "Name: Model_2, dtype: int64"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
+    "#Looping through the airbus_aircraft_models dictionary\n",
     "for model in airbus_aircraft_models:\n",
+    "    #Looping through individual dictionary entrys which are lists of variants that make up each aircraft model\n",
     "    for variant in airbus_aircraft_models[model]:\n",
-    "        Airbus_data.loc[Airbus_data['Model'].str.contains(variant, case=False), 'Model_2'] = model\n",
-    "df_301=df_30.merge(Airbus_data['Model_2'], how = 'outer')\n",
-    "df_301['Model_2'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "172    4214\n",
-       "n/a    3032\n",
-       "182    1845\n",
-       "150    1534\n",
-       "210    1080\n",
-       "152    1036\n",
-       "180     655\n",
-       "185     542\n",
-       "170     432\n",
-       "177     397\n",
-       "188     347\n",
-       "140     264\n",
-       "Name: Model_2, dtype: int64"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_301.loc[df_301['Make_2']=='Cessna']['Model_2'].value_counts()"
+    "        airbus_data.loc[airbus_data['Model'].str.contains(variant, case=False), 'Model.Clean'] = model\n",
+    "#Merging the Airbus_data back into the main data frame\n",
+    "#df_30=df_30.merge(airbus_data['Model.Clean'], how = 'outer')\n",
+    "df_30['Model'].fillna('n/a', inplace=True)"
    ]
   },
   {
@@ -1432,13 +1344,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Taking model data with variant information, grouping it by family and saving it in new column called Model.Clean\n",
     "for model in cessna_aircraft_models:\n",
-    "    df_30.loc[df_30['Model'].str.contains(model, case=False), 'Model_2'] = model\n",
-    "df_30['Model_2'].fillna('n/a', inplace=True)"
+    "    df_30.loc[df_30['Model'].str.contains(model, case=False), 'Model.Clean'] = model\n",
+    "df_30['Model.Clean'].fillna('n/a', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "737         856\n",
+       "A320        229\n",
+       "Model 75    203\n",
+       "747         179\n",
+       "757         163\n",
+       "777         151\n",
+       "767         150\n",
+       "A330         57\n",
+       "727          49\n",
+       "787          41\n",
+       "A300         25\n",
+       "717          22\n",
+       "707          12\n",
+       "A310          8\n",
+       "A220          6\n",
+       "A380          5\n",
+       "A340          1\n",
+       "Name: Model.Clean, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_data = airbus_data.merge(boeing_data, how = 'outer')\n",
+    "combined_data['Model.Clean'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172    4218\n",
+       "n/a    3048\n",
+       "182    1849\n",
+       "150    1538\n",
+       "210    1085\n",
+       "152    1037\n",
+       "180     655\n",
+       "185     544\n",
+       "170     432\n",
+       "177     397\n",
+       "188     347\n",
+       "140     264\n",
+       "Name: Model.Clean, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_30['Model.Clean'].loc[df_30['Make.Clean']=='Cessna'].value_counts()"
    ]
   },
   {
@@ -1449,10 +1441,17 @@
     {
      "data": {
       "text/plain": [
-       "Mcdonnell Douglas    5\n",
-       "Douglas              3\n",
-       "BOEING               1\n",
-       "Name: Make, dtype: int64"
+       "737    856\n",
+       "n/a    248\n",
+       "747    179\n",
+       "757    169\n",
+       "777    151\n",
+       "767    150\n",
+       "727     49\n",
+       "787     41\n",
+       "717     22\n",
+       "707     12\n",
+       "Name: Model.Clean, dtype: int64"
       ]
      },
      "execution_count": 36,
@@ -1461,7 +1460,7 @@
     }
    ],
    "source": [
-    "df['Make'].loc[df['Model']=='DC-9'].value_counts()"
+    "df_30['Model.Clean'].loc[df_30['Make.Clean']=='Boeing'].value_counts()"
    ]
   },
   {
@@ -1472,8 +1471,8 @@
     {
      "data": {
       "text/plain": [
-       "n/a    256\n",
-       "Name: Model_2, dtype: int64"
+       "n/a    331\n",
+       "Name: Model.Clean, dtype: int64"
       ]
      },
      "execution_count": 37,
@@ -1482,86 +1481,12 @@
     }
    ],
    "source": [
-    "df_30['Model_2'].loc[df_30['Make']=='Airbus'].value_counts()"
+    "df_30['Model.Clean'].loc[df_30['Make.Clean']=='Airbus'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "172    4214\n",
-       "n/a    3032\n",
-       "182    1845\n",
-       "150    1534\n",
-       "210    1080\n",
-       "152    1036\n",
-       "180     655\n",
-       "185     542\n",
-       "170     432\n",
-       "177     397\n",
-       "188     347\n",
-       "140     264\n",
-       "Name: Model_2, dtype: int64"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_30['Model_2'].loc[df_30['Make_2']=='Cessna'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "737    828\n",
-       "n/a    223\n",
-       "747    172\n",
-       "757    164\n",
-       "767    148\n",
-       "777    143\n",
-       "727     48\n",
-       "787     39\n",
-       "717     22\n",
-       "707     11\n",
-       "Name: Model_2, dtype: int64"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_30['Model_2'].loc[df_30['Make']=='Boeing'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_out = df_30.loc[df_30['Make_2']=='Cessna' or 'Boeing']\n",
-    "#df_out "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
