--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\42ben\\anaconda3\\envs\\learn-env\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3145: DtypeWarning: Columns (6,7,28) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3145: DtypeWarning: Columns (6,7,28) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "4       16-04-1980  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -549,14 +549,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-13-aea9090f7cda>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-11-aea9090f7cda>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -647,7 +647,7 @@
        "32030                     0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,26 +668,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-14-b7ee92eb377b>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-12-b7ee92eb377b>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean1['Make'] = df_clean1['Make'].str.lower()\n",
-      "<ipython-input-14-b7ee92eb377b>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-12-b7ee92eb377b>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean1['Make'] = df_clean1['Make'].str.title()\n",
-      "<ipython-input-14-b7ee92eb377b>:7: SettingWithCopyWarning: \n",
+      "<ipython-input-12-b7ee92eb377b>:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -708,20 +708,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-15-25c7042f219a>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-13-25c7042f219a>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean1['Model'] = df_clean1['Model'].str.upper()\n",
-      "<ipython-input-15-25c7042f219a>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-13-25c7042f219a>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "Name: Model, Length: 87951, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,14 +782,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\42ben\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\series.py:4517: SettingWithCopyWarning: \n",
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\series.py:4517: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "Name: Aircraft.Category, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,14 +829,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-19-a50e700fca08>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-17-a50e700fca08>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "Name: Make.Model, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "Length: 18520, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "Name: Make.Model, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
        "Name: Make.Model, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1071,14 +1071,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-28-da67dccf8525>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-26-da67dccf8525>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1091,6 +1091,245 @@
     "# Fill 'n/a' value with 'Airplane':\n",
     "df_ap_mm['Aircraft.Category'] = df_ap_mm['Aircraft.Category'].replace(['n/a'], 'Airplane')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean Make and Model Data\n",
+    "The Make and Model columns need to be cleaned to draw conclusions from the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\indexing.py:1596: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "C:\\Users\\rober\\anaconda3\\envs\\learn-env\\lib\\site-packages\\pandas\\core\\indexing.py:1765: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  isetter(loc, value)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List of Aircraft Manufacturers used to clean data \n",
+    "major_manufacturers=['Cessna',\n",
+    "'Piper',\n",
+    "'Beech',\n",
+    "'Boeing',\n",
+    "'Mooney',\n",
+    "'Bellanca',\n",
+    "'Air Tractor',\n",
+    "'Grumman',\n",
+    "'Maule',\n",
+    "'Aeronca',\n",
+    "'Champion',\n",
+    "'Mcdonnell Douglas',\n",
+    "'Airbus',\n",
+    "'Stinson',\n",
+    "'Luscombe',\n",
+    "'Cirrus',\n",
+    "'Aero Commander',\n",
+    "'Taylorcraft',\n",
+    "'North American',\n",
+    "'De Havilland',\n",
+    "'Embraer',\n",
+    "'Cirrus',\n",
+    "'Aviat',\n",
+    "'Ayres',\n",
+    "'Rockwell',\n",
+    "'Grumman',\n",
+    "'Socata',\n",
+    "'Dehavilland',\n",
+    "'Learjet',\n",
+    "'Aviat',\n",
+    "'Diamond Aircraft',\n",
+    "'Ercoupe',\n",
+    "'Bombardier',\n",
+    "]\n",
+    "\n",
+    "#Filling null values\n",
+    "df_30['Make'].fillna('n/a', inplace=True)\n",
+    "#cleaning Make data and populating new column Make.Clean\n",
+    "#e.g. The Boeing Aircraft Company, Boeing inc and boeing all become Boeing in Make.Clean\n",
+    "for manufacturer in major_manufacturers:\n",
+    "    df_30.loc[df_30['Make'].str.contains(manufacturer, case=False), 'Make.Clean'] = manufacturer\n",
+    "#De Havilland is in the data as De Havilland and Dehavilland so it needs a special case\n",
+    "df_30.loc[df_30['Make'].str.contains('Dehavilland', case=False), 'Make.Clean'] = 'De Havilland'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning Model Data\n",
+    "Below are groups of the most popular aircraft models for Boeing, Airbus and Cessna. These were created using data from the companies websites. For example, Airbus considers its A319, A320 and A321 airliners to be variants in the A320 family so they are grouped together as the A320."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aircraft model groups\n",
+    "boeing_aircraft_models = {'707':['707'],'717':['717'],'727':['727'],'737':['737'],'747':['747'],'757':['757'],\n",
+    "                          '767':['767'],'777':['777'],'787':['787'],'Model 75':\n",
+    "                          ['A75','A 75','A-75','B75','B 75','B-75','D75','D 75','D-75','E75','E 75','E-75','PT 17','PT-17','PT17']}\n",
+    "airbus_aircraft_models = {'A220':['220','BD50'],'A300':['300','F462'],'A310':['310'],'A320':['319','320','321'],\n",
+    "                          'A330':['330'],'A340':['340'],'A350':['350'],'A380':['380']}\n",
+    "cessna_aircraft_models = ['152','172','150','180','182','140','170','188','185','177','210']\n",
+    "#Filling null values in Model data\n",
+    "df_30['Model'].fillna('n/a', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boeing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "737         935\n",
+       "Model 75    257\n",
+       "747         237\n",
+       "767         191\n",
+       "757         178\n",
+       "777         165\n",
+       "727          95\n",
+       "787          42\n",
+       "717          24\n",
+       "707          15\n",
+       "Name: Model.Clean, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#First creating a new data frame with just Boeing data\n",
+    "boeing_data = pd.DataFrame(df_30.loc[df_30['Make.Clean']=='Boeing'])\n",
+    "#Taking model data with variant information, grouping it by family and saving it in new column called Model.Clean\n",
+    "#e.g. 737-200, B737-800 and 737-3B7 are all stored as 737\n",
+    "for model in boeing_aircraft_models:\n",
+    "    df_30.loc[df_30['Model'].str.contains(model, case=False), 'Model.Clean'] = model\n",
+    "#Looping through the boeing_aircraft_models dictionary\n",
+    "for model in boeing_aircraft_models:\n",
+    "    #Looping through individual dictionary entrys which are lists of variants that make up each aircraft model\n",
+    "    for variant in boeing_aircraft_models[model]:\n",
+    "        boeing_data.loc[boeing_data['Model'].str.contains(variant, case=False), 'Model.Clean'] = model\n",
+    "        \n",
+    "boeing_data['Model.Clean'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Airbus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#First creating a new data frame with just Airbus data\n",
+    "airbus_data = pd.DataFrame(df_30.loc[df_30['Make.Clean']=='Airbus'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#removeing dashes and white space then saving the first four characters \n",
+    "airbus_data['Model'] = airbus_data['Model'].str.replace('-','')\n",
+    "airbus_data['Model'] = airbus_data['Model'].str.replace(' ','')\n",
+    "airbus_data['Model'] = airbus_data['Model'].str[:4]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Looping through the airbus_aircraft_models dictionary\n",
+    "for model in airbus_aircraft_models:\n",
+    "    #Looping through individual dictionary entrys which are lists of variants that make up each aircraft model\n",
+    "    for variant in airbus_aircraft_models[model]:\n",
+    "        airbus_data.loc[airbus_data['Model'].str.contains(variant, case=False), 'Model.Clean'] = model\n",
+    "#Merging the Airbus_data back into the main data frame\n",
+    "df_30['Model'].fillna('n/a', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cessna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Taking model data with variant information, grouping it by family and saving it in new column called Model.Clean\n",
+    "for model in cessna_aircraft_models:\n",
+    "    df_30.loc[df_30['Model'].str.contains(model, case=False), 'Model.Clean'] = model\n",
+    "df_30['Model.Clean'].fillna('n/a', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combining Data Frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_data = airbus_data.merge(boeing_data, how = 'outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
